# ldtray

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
examples/: basic.rs  smoke.rs
src/: error.rs  event.rs  icon.rs  lib.rs  menu.rs  notification.rs  tray.rs
src/platform/: mod.rs
src/platform/linux/: dbus.rs  menu.rs  mod.rs  msg.rs  notify.rs
src/platform/macos/: mod.rs  objc.rs
src/platform/windows/: ffi.rs  mod.rs
